Added password input field

--- a/forms.html
+++ b/forms.html
@@ -11,6 +11,7 @@
 <body>
     <form>
         <input type="text" placeholder="Enter your username">
+        <input type="text" placeholder="Enter your password">
     </form>
 </body>
 
