Fixed type attr in password input field

--- a/forms.html
+++ b/forms.html
@@ -11,7 +11,7 @@
 <body>
     <form>
         <input type="text" placeholder="Enter your username">
-        <input type="text" placeholder="Enter your password">
+        <input type="password" placeholder="Enter your password">
     </form>
 </body>
 
