--- a/forms.html
+++ b/forms.html
@@ -10,6 +10,7 @@
 
 <body>
     <form>
+        <label for="username">Enter your username:</label>
         <input type="text" placeholder="Enter your username">
         <input type="password" placeholder="Enter your password">
     </form>
