Added an id to the username input

--- a/forms.html
+++ b/forms.html
@@ -10,9 +10,9 @@
 
 <body>
     <form>
+        <!-- The for attr is linked to the id attr in the form -->
         <label for="username">Enter your username:</label>
-        <input type="text" placeholder="Enter your username">
-        <input type="password" placeholder="Enter your password">
+        <input id="username" type="text" placeholder="Enter your username"> <br>
     </form>
 </body>
 
