Added a label and an input field to the password

--- a/forms.html
+++ b/forms.html
@@ -13,6 +13,12 @@
         <!-- The for attr is linked to the id attr in the form -->
         <label for="username">Enter your username:</label>
         <input id="username" type="text" placeholder="Enter your username"> <br>
+
+        <!-- This approach is ok, but not recommended -->
+        <label>
+            Enter your password:
+            <input id="password" type="password" placeholder="Enter your password">
+        </label>
     </form>
 </body>
 
