Added the submit button to the form

--- a/forms.html
+++ b/forms.html
@@ -19,6 +19,9 @@
             Enter your password:
             <input id="password" type="password" placeholder="Enter your password">
         </label>
+
+        <br>
+        <button type="submit">Submit</button>
     </form>
 </body>
 
