Added another submit button using input tag

--- a/forms.html
+++ b/forms.html
@@ -21,7 +21,10 @@
         </label>
 
         <br>
-        <button type="submit">Submit</button>
+        <!-- in the button tag, u can control the text directly, unlike in the input tag
+        Where you need the value attr -->
+        <button>Submit using a button tag</button>
+        <input type="submit" value="a Submit button using input tag">
     </form>
 </body>
 
