Added a submit button that will not work, why? read comments

--- a/forms.html
+++ b/forms.html
@@ -25,6 +25,8 @@
         Where you need the value attr -->
         <button>Submit using a button tag</button>
         <input type="submit" value="a Submit button using input tag">
+        <!-- because of the  -->
+        <button type="button">This button will not submit</button>
     </form>
 </body>
 
