Added a button outside the form

--- a/forms.html
+++ b/forms.html
@@ -28,6 +28,8 @@
         <!-- because of the  -->
         <button type="button">This button will not submit</button>
     </form>
+    <!-- Could be used in many things, i.e: read more button -->
+    <button>a button outside the form</button>
 </body>
 
 </html>
