Added action attr to form

--- a/forms.html
+++ b/forms.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form>
+    <form action="/homepage.html">
         <!-- The for attr is linked to the id attr in the form -->
         <label for="username">Enter your username:</label>
         <input id="username" type="text" placeholder="Enter your username"> <br>
