Edited a comment for more clarification

--- a/forms.html
+++ b/forms.html
@@ -13,7 +13,7 @@
         <!-- The for attr is linked to the id attr in the form -->
         <label for="username">Enter your username:</label>
         <!-- The name attr will be in the link, as it carries the parameters of the query -->
-        <!-- ex: www.website.com/form_destination.html?username=omar -->
+        <!-- ex: www.website.com/form_destination.html?username=omar&password=1234 -->
         <input name="username" id="username" type="text" placeholder="Enter your username"> <br>
 
         <!-- This approach is ok, but not recommended -->
