Added reddit search bar in the form page

--- a/forms.html
+++ b/forms.html
@@ -32,6 +32,17 @@
     </form>
     <!-- Could be used in many things, i.e: read more button -->
     <button>a button outside the form</button>
+
+    <hr>
+    <h1>Search on Internet Websites</h1>
+    <form action="https://www.reddit.com/search/">
+        <label for="reddit">Reddit Search:</label>
+        <br>
+        <input type="text" id="reddit" name="q" placeholder="enter search keywords">
+        <br>
+        <button type="button">Search</button>
+    </form>
+
 </body>
 
 </html>
