Added comments to reddit search bar

--- a/forms.html
+++ b/forms.html
@@ -38,6 +38,8 @@
     <form action="https://www.reddit.com/search/">
         <label for="reddit">Reddit Search:</label>
         <br>
+        <!-- the name attr is used in the url of reddit search -->
+        <!-- while the for attr in <label> is used with id attr in <input> -->
         <input type="text" id="reddit" name="q" placeholder="enter search keywords">
         <br>
         <button type="button">Search</button>
