--- a/forms.html
+++ b/forms.html
@@ -35,6 +35,7 @@
 
     <hr>
     <h1>Search on Internet Websites</h1>
+    <!-- Reddit search form -->
     <form action="https://www.reddit.com/search/">
         <label for="reddit">Reddit Search:</label>
         <br>
@@ -45,6 +46,8 @@
         <button type="button">Search</button>
     </form>
 
+    <!-- Google search form using emmet-->
+    <form action=""><label for=""></label><br><input type="text"><br><button></button></form>
 </body>
 
 </html>
