Added the google search url to action attr

--- a/forms.html
+++ b/forms.html
@@ -47,7 +47,8 @@
     </form>
 
     <!-- Google search form using emmet-->
-    <form action=""><label for=""></label><br><input type="text"><br><button></button></form>
+    <form action="https://www.google.com/search/"><label for=""></label><br><input type="text"><br><button></button>
+    </form>
 </body>
 
 </html>
