Linked label and input through for and id properties

--- a/forms.html
+++ b/forms.html
@@ -47,7 +47,12 @@
     </form>
 
     <!-- Google search form using emmet-->
-    <form action="https://www.google.com/search/"><label for=""></label><br><input type="text"><br><button></button>
+    <form action="https://www.google.com/search/">
+        <label for="google"></label>
+        <br>
+        <input type="text" id="google">
+        <br>
+        <button></button>
     </form>
 </body>
 
