Added the placeholder for the google search box

--- a/forms.html
+++ b/forms.html
@@ -50,7 +50,7 @@
     <form action="https://www.google.com/search/">
         <label for="google"></label>
         <br>
-        <input type="text" id="google">
+        <input type="text" id="google" placeholder="enter search keywords">
         <br>
         <button></button>
     </form>
