--- a/forms.html
+++ b/forms.html
@@ -52,7 +52,7 @@
         <br>
         <input type="text" id="google" placeholder="enter search keywords">
         <br>
-        <button></button>
+        <button type="button">Search</button>
     </form>
 </body>
 
