Added the name attr to google search <input> tag

--- a/forms.html
+++ b/forms.html
@@ -50,7 +50,7 @@
     <form action="https://www.google.com/search/">
         <label for="google"></label>
         <br>
-        <input type="text" id="google" placeholder="enter search keywords">
+        <input type="text" id="google" name="q" placeholder="enter search keywords">
         <br>
         <button type="button">Search</button>
     </form>
