Added the label text to google search

--- a/forms.html
+++ b/forms.html
@@ -48,7 +48,7 @@
 
     <!-- Google search form using emmet-->
     <form action="https://www.google.com/search/">
-        <label for="google"></label>
+        <label for="google">Google</label>
         <br>
         <input type="text" id="google" name="q" placeholder="enter search keywords">
         <br>
