--- a/forms.html
+++ b/forms.html
@@ -47,9 +47,9 @@
     </form>
 
     <br>
-    
+
     <!-- Google search form using emmet-->
-    <form action="https://www.google.com/search/">
+    <form action="https://www.google.com/search">
         <label for="google">Google</label>
         <br>
         <input type="text" id="google" name="q" placeholder="enter search keywords">
