Fixed google label text

--- a/forms.html
+++ b/forms.html
@@ -50,7 +50,7 @@
 
     <!-- Google search form using emmet-->
     <form action="https://www.google.com/search">
-        <label for="google">Google</label>
+        <label for="google">Google Search</label>
         <br>
         <input type="text" id="google" name="q" placeholder="enter search keywords">
         <br>
