Added <form> tage for youtube search

--- a/forms.html
+++ b/forms.html
@@ -56,6 +56,11 @@
         <br>
         <button type="button">Search</button>
     </form>
+
+    <!-- Youtube search form -->
+    <form action="https://www.youtube.com/results">
+        
+    </form>
 </body>
 
 </html>
