--- a/forms.html
+++ b/forms.html
@@ -57,9 +57,9 @@
         <button type="button">Search</button>
     </form>
 
-    <!-- Youtube search form -->
+    <!-- YouTube search form -->
     <form action="https://www.youtube.com/results">
-        
+        <label for="youtube">Youtube Search</label>
     </form>
 </body>
 
