Added a input tage for youtube form

--- a/forms.html
+++ b/forms.html
@@ -61,6 +61,8 @@
     <!-- YouTube search form -->
     <form action="https://www.youtube.com/results">
         <label for="youtube">Youtube Search</label>
+        <br>
+        <input id="youtube" name="search_query" type="text" placeholder="Enter search keyword">
     </form>
 </body>
 
