Added submit button using <input> tag for the youtube search form

--- a/forms.html
+++ b/forms.html
@@ -63,6 +63,8 @@
         <label for="youtube">Youtube Search</label>
         <br>
         <input id="youtube" name="search_query" type="text" placeholder="Enter search keyword">
+        <br>
+        <input type="submit">
     </form>
 </body>
 
