Added the first table just as slides

--- a/tables.html
+++ b/tables.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practicing with Tables</title>
+    <style>
+        td {
+            background-color: rgb(241, 224, 224);
+        }
+    </style>
 </head>
 
 <body>
@@ -33,6 +38,32 @@
                 <td>Business</td>
                 <td>$49.99</td>
                 <td>24/7</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <hr>
+    <!-- Making the table in HTML slide -->
+    <table>
+        <thead>
+            <th>Name</th>
+            <th>Height</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Nick</td>
+                <td>171cm</td>
+            </tr>
+            <tr>
+                <td>Helen</td>
+                <td>165cm</td>
+            </tr>
+            <tr>
+                <td>Donald Duck</td>
+                <td>30cm</td>
+            </tr>
+            <tr>
+                <td colspan="2">Mickey Mouse</td>
             </tr>
         </tbody>
     </table>
