changed th and td colors

--- a/tables.html
+++ b/tables.html
@@ -8,7 +8,11 @@
     <title>Practicing with Tables</title>
     <style>
         td {
-            background-color: rgb(241, 224, 224);
+            background-color: rgb(185, 197, 240);
+        }
+
+        th{
+            background-color: #deca97;
         }
     </style>
 </head>
@@ -67,6 +71,8 @@
             </tr>
         </tbody>
     </table>
+
+    
 </body>
 
 </html>
