--- a/tables.html
+++ b/tables.html
@@ -103,6 +103,9 @@
             </tr>
         </tbody>
     </table>
+
+    <!-- Adding the third table -->
+    <!-- Note, Dr Faisal does not use <thead> and <tbody> tags -->
 </body>
 
 </html>
