--- a/tables.html
+++ b/tables.html
@@ -106,6 +106,17 @@
 
     <!-- Adding the third table -->
     <!-- Note, Dr Faisal does not use <thead> and <tbody> tags -->
+    <table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Height</th>
+                <th>Age</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
 </body>
 
 </html>
