Added a <hr> and updated all hr(s) style

--- a/tables.html
+++ b/tables.html
@@ -74,7 +74,7 @@
         </tbody>
     </table>
 
-    <hr>
+    <hr size="5px" color="black">
     <table>
         <caption>Statistics</caption>
         <thead>
@@ -104,6 +104,7 @@
         </tbody>
     </table>
 
+    <hr size="5px" color="black">
     <!-- Adding the third table -->
     <!-- Note, Dr Faisal does not use <thead> and <tbody> tags -->
     <table>
