Added a caption for the third table

--- a/tables.html
+++ b/tables.html
@@ -108,6 +108,7 @@
     <!-- Adding the third table -->
     <!-- Note, Dr Faisal does not use <thead> and <tbody> tags -->
     <table>
+        <caption>Statistics</caption>
         <thead>
             <tr>
                 <th>Name</th>
