Added the third table successfully

--- a/tables.html
+++ b/tables.html
@@ -117,6 +117,24 @@
             </tr>
         </thead>
         <tbody>
+            <tr>
+                <td rowspan="2" colspan="2">Nick</td>
+                <td>A</td>
+            </tr>
+            <tr>
+                <td>D</td>
+            </tr>
+            <tr>
+                <td colspan="2">F</td>
+                <td>M</td>
+            </tr>
+            <tr>
+                <td colspan="2">Helen</td>
+                <td>165cm</td>
+            </tr>
+            <tr>
+                <td colspan="3">Mickey Mouse</td>
+            </tr>
         </tbody>
     </table>
 </body>
