Added align attr to td elements

--- a/tables.html
+++ b/tables.html
@@ -118,19 +118,19 @@
         </thead>
         <tbody>
             <tr>
-                <td rowspan="2" colspan="2">Nick</td>
-                <td>A</td>
+                <td valign="bottom" align="right" rowspan="2" colspan="2">Nick</td>
+                <td align="left">A</td>
             </tr>
             <tr>
-                <td>D</td>
+                <td align="right">D</td>
             </tr>
             <tr>
                 <td colspan="2">F</td>
-                <td>M</td>
+                <td align="center">M</td>
             </tr>
             <tr>
                 <td colspan="2">Helen</td>
-                <td>165cm</td>
+                <td align="left">165cm</td>
             </tr>
             <tr>
                 <td colspan="3">Mickey Mouse</td>
