Fixed colspan property to the right tag, final table is done now

--- a/tables.html
+++ b/tables.html
@@ -129,8 +129,8 @@
                 <td align="center">M</td>
             </tr>
             <tr>
-                <td colspan="2">Helen</td>
-                <td align="left">165cm</td>
+                <td>Helen</td>
+                <td colspan="2" align="left">165cm</td>
             </tr>
             <tr>
                 <td colspan="3">Mickey Mouse</td>
