--- a/forms.html
+++ b/forms.html
@@ -29,6 +29,12 @@
         <input type="submit" value="a Submit button using input tag">
         <!-- because of the  -->
         <button type="button">This button will not submit</button>
+
+        <h2>This is a TextArea</h2>
+        <!-- max length is 100 char -->
+        <textarea rows="10" cols="20">
+
+        </textarea>
     </form>
     <!-- Could be used in many things, i.e: read more button -->
     <button>a button outside the form</button>
