Added a name to the text area

--- a/forms.html
+++ b/forms.html
@@ -32,7 +32,7 @@
 
         <h2>This is a TextArea</h2>
         <!-- max length is 100 char -->
-        <textarea rows="10" cols="20" maxlength="100" title="This message will pop up when the curser stop on the the text_area">
+        <textarea name="firsttextarea" rows="10" cols="20" maxlength="100" title="This message will pop up when the curser stop on the the text_area">
 
         </textarea>
     </form>
