--- a/forms.html
+++ b/forms.html
@@ -92,6 +92,15 @@
     </form>
     <hr>
 
+    <h2>Adding different input types</h2>
+    <!-- Adding different input types -->
+    <form action="">
+        <label for="color_selection">Select your favourite color:</label>
+        <input type="color" id="color_selection" name="color">
+        <br>
+        <input type="submit">
+
+    </form>
 </body>
 
 </html>
