Added a comment for the color input tag and a break after it

--- a/forms.html
+++ b/forms.html
@@ -95,10 +95,13 @@
     <h2>Adding different input types</h2>
     <!-- Adding different input types -->
     <form action="">
+        <!-- Color -->
         <label for="color_selection">Select your favourite color:</label>
         <input type="color" id="color_selection" name="color">
         <br>
         <input type="submit">
+        <br>
+
 
     </form>
 </body>
