Added an email input tag

--- a/forms.html
+++ b/forms.html
@@ -102,7 +102,11 @@
         <input type="submit">
         <br>
 
-
+        <!-- Email : has input validation -->
+        <label for="email_bar">Enter your E-mail:</label>
+        <input type="email" name="email" id="email_bar">
+        <br>
+        <input type="submit">
     </form>
 </body>
 
