Added a date input tag

--- a/forms.html
+++ b/forms.html
@@ -107,6 +107,14 @@
         <input type="email" name="email" id="email_bar">
         <br>
         <input type="submit">
+        <br>
+
+        <!-- Date : e.x. Birthday -->
+        <label for="birthday_selection">Enter your Birthday:</label>
+        <input type="date" name="birthday" id="birthday_selection">
+        <input type="submit">
+        <br>
+
     </form>
 </body>
 
