Added comment of other different input types

--- a/forms.html
+++ b/forms.html
@@ -115,7 +115,8 @@
         <br>
         <input type="submit">
         <br>
-
+        <!-- Other types include: tel, search, range (with min, max attr),
+        number, month -->
     </form>
 </body>
 
