Added radio type of <input>

--- a/forms.html
+++ b/forms.html
@@ -114,9 +114,21 @@
         <input type="date" name="birthday" id="birthday_selection">
         <br>
         <input type="submit">
-        <br>
+        <br><br>
         <!-- Other types include: tel, search, range (with min, max attr),
         number, month -->
+
+
+        <!-- Radio Button -->
+        <!-- Note, they must have the same value of 'name' attr -->
+
+        <label>Select your gender:</label>
+        <input type="radio" name="gender" id="male">
+        <label for="male">Male</label>
+        <input type="radio" name="gender" id="female">
+        <label for="female">Female</label>
+        <br><br>
+
     </form>
 </body>
 
