Added the value attr to the radio type input tags

--- a/forms.html
+++ b/forms.html
@@ -121,11 +121,11 @@
 
         <!-- Radio Button -->
         <!-- Note, they must have the same value of 'name' attr -->
-
+        <!-- The 'value' attr will be :value=on: like that in the url -->
         <label>Select your gender:</label>
-        <input type="radio" name="gender" id="male">
+        <input type="radio" name="gender" id="male" value="male">
         <label for="male">Male</label>
-        <input type="radio" name="gender" id="female">
+        <input type="radio" name="gender" id="female" value="female">
         <label for="female">Female</label>
         <br><br>
 
