--- a/forms.html
+++ b/forms.html
@@ -122,11 +122,14 @@
         <!-- Radio Button -->
         <!-- Note, they must have the same value of 'name' attr -->
         <!-- The 'value' attr will be :value=on: like that in the url -->
+        <!-- If male is selected this will be included in the url: ...&gender=male -->
         <label>Select your gender:</label>
         <input type="radio" name="gender" id="male" value="male">
         <label for="male">Male</label>
         <input type="radio" name="gender" id="female" value="female">
         <label for="female">Female</label>
+        <br>
+        <input type="submit">
         <br><br>
 
     </form>
