Added more clrification to the comment about radio buttons

--- a/forms.html
+++ b/forms.html
@@ -122,7 +122,8 @@
         <!-- Radio Button -->
         <!-- Note, they must have the same value of 'name' attr -->
         <!-- The 'value' attr will be :value=on: like that in the url -->
-        <!-- If male is selected this will be included in the url: ...&gender=male -->
+        <!-- If male is selected this will be included in the url: ...&gender=male 
+        ; In the format of (in terms of attributes) name=value -->
         <label>Select your gender:</label>
         <input type="radio" name="gender" id="male" value="male">
         <label for="male">Male</label>
