Added the select tag with option, like a dropdown menu

--- a/forms.html
+++ b/forms.html
@@ -133,6 +133,23 @@
         <input type="submit">
         <br><br>
 
+        <!-- Select : DropdownMenu -->
+        <!-- If Egypt is choosen, then this will be included in the url: -->
+        <!-- ....&nationality=egypt -->
+        <!--  -->
+        <!-- it is in the format of <select>.name=<option>.value -->
+        <label for="select_countries">Select from this list:</label>
+        <select name="nationality" id="select_countries">
+            <option value=""> -- Select your country of origin -- </option>
+            <option value="egypt">Egypt</option>
+            <option value="bahrain">Bahrain</option>
+            <option value="saudi">Saudi Arabia</option>
+            <option value="usa">USA</option>
+        </select>
+        <br>
+        <input type="submit">
+        <br><br>
+
     </form>
 </body>
 
