Added the slected attr to first <option>, and some comments about it

--- a/forms.html
+++ b/forms.html
@@ -138,9 +138,13 @@
         <!-- ....&nationality=egypt -->
         <!--  -->
         <!-- it is in the format of <select>.name=<option>.value -->
+        <!--  -->
+        <!-- We already had a placeholder with an empty value as the first option -->
+        <!-- but the 'selected' attr in <option> makes the option the be the default one -->
+        <!-- when the user firstly start to select an option. -->
         <label for="select_countries">Select from this list:</label>
         <select name="nationality" id="select_countries">
-            <option value=""> -- Select your country of origin -- </option>
+            <option value="" selected> -- Select your country of origin -- </option>
             <option value="egypt">Egypt</option>
             <option value="bahrain">Bahrain</option>
             <option value="saudi">Saudi Arabia</option>
