Added body contents to tut1 index.html

--- a/tutorial1/index.html
+++ b/tutorial1/index.html
@@ -9,7 +9,17 @@
 </head>
 
 <body>
-    
+    <header>
+        <h1>Books at Amazon</h1>
+    </header>
+    <nav>
+        <a href="checkout.html" target="omars_iframe">Guest Checkout</a>
+
+
+    </nav>
+    <main>
+        <iframe src="" name="omars_iframe" width="600" height="500"></iframe>
+    </main>
 </body>
 
 </html>
