Added name form to tut1 checkout.html

--- a/tutorial1/checkout.html
+++ b/tutorial1/checkout.html
@@ -9,7 +9,14 @@
 </head>
 
 <body>
-    
+    <table>
+        <tr>
+            <td>Name</td>
+            <td>
+                <input type="text" name="name">
+            </td>
+        </tr>
+    </table>
 </body>
 
 </html>
