--- a/tutorial1/checkout.html
+++ b/tutorial1/checkout.html
@@ -16,6 +16,19 @@
                 <input type="text" name="name">
             </td>
         </tr>
+        <tr>
+            <td>Country</td>
+            <td>
+                <select name="country">
+                    <option value="egy">Egypt</option>
+                    <option value="bh">Bahrain</option>
+                    <option value="uk">UK</option>
+                    <option value="usa">USA</option>
+                    <option value="de">Germany</option>
+                </select>
+            </td>
+        </tr>
+        
     </table>
 </body>
 
