Added address form to tut1 checkout.html

--- a/tutorial1/checkout.html
+++ b/tutorial1/checkout.html
@@ -28,6 +28,10 @@
                 </select>
             </td>
         </tr>
+        <tr>
+            <td>Address</td>
+            <td><textarea name="address" cols="30" rows="5"></textarea></td>
+        </tr>
         
     </table>
 </body>
