Added payment form to tut1 checkout.html

--- a/tutorial1/checkout.html
+++ b/tutorial1/checkout.html
@@ -32,7 +32,14 @@
             <td>Address</td>
             <td><textarea name="address" cols="30" rows="5"></textarea></td>
         </tr>
-        
+        <tr>
+            <td>Payment</td>
+            <td>
+                <input type="radio" name="payment"> Visa
+                <br>
+                <input type="radio" name="payment"> Master Card
+            </td>
+        </tr>
     </table>
 </body>
 
