Added card no. form to tut1 checkout.html

--- a/tutorial1/checkout.html
+++ b/tutorial1/checkout.html
@@ -40,6 +40,11 @@
                 <input type="radio" name="payment"> Master Card
             </td>
         </tr>
+        <tr>
+            <td>Card No.</td>
+            <td><input type="text" maxlength="16"></td>
+        </tr>
+        
     </table>
 </body>
 
