Added expiry date form to tut1 checkout.html

--- a/tutorial1/checkout.html
+++ b/tutorial1/checkout.html
@@ -44,6 +44,12 @@
             <td>Card No.</td>
             <td><input type="text" maxlength="16"></td>
         </tr>
+        <tr>
+            <td>Expiry Date</td>
+            <td>
+                <input type="date" name="expiry_date">
+            </td>
+        </tr>
         
     </table>
 </body>
