Added rank form to tut1 checkout.html

--- a/tutorial1/checkout.html
+++ b/tutorial1/checkout.html
@@ -50,6 +50,12 @@
                 <input type="date" name="expiry_date">
             </td>
         </tr>
+        <tr>
+            <td>Rank the website</td>
+            <td>
+                <input type="range" name="rating" min="1" max="5">
+            </td>
+        </tr>
         
     </table>
 </body>
