Added submit button for the form to tut1 checkout.html

--- a/tutorial1/checkout.html
+++ b/tutorial1/checkout.html
@@ -56,7 +56,11 @@
                 <input type="range" name="rating" min="1" max="5">
             </td>
         </tr>
-        
+        <tr>
+            <td colspan="2" align="center">
+                <input type="submit" name="submit">
+            </td>
+        </tr>
     </table>
 </body>
 
